# linuxity

./: .gitignore  CMakeLists.txt  README.md
doc/: ARCHITECTURE.md  MANUAL.md  reference-study.md
include/linuxity/abi/: result.hpp  syscall.hpp  sysno.hpp  types.hpp
include/linuxity/host/: host.hpp  posix_host.hpp
include/linuxity/kernel/: authority.hpp  file_namespace.hpp  kernel.hpp  machine.hpp  meta_store.hpp  process_table.hpp  resources.hpp  subsystem.hpp
include/linuxity/loader/: elf.hpp  interp.hpp  loader.hpp  stack.hpp
include/linuxity/mm/: address_space.hpp
include/linuxity/runtime/: ptrace_trap.hpp  resource_governor.hpp  seccomp_filter.hpp  trap.hpp
include/linuxity/vfs/: devfs.hpp  hostfs.hpp  inode.hpp  procfs.hpp  sysfs.hpp  tmpfs.hpp  vfs.hpp
src/: main.cpp
src/host/: CMakeLists.txt  posix_host.cpp
tests/: CMakeLists.txt  test_authority.cpp  test_core.cpp  test_file_namespace.cpp  test_hostfs.cpp  test_interp.cpp  test_loader.cpp  test_resources.cpp  test_run_bind.cpp  test_run_daemon.cpp  test_run_dev.cpp  test_run_empty_path.cpp  test_run_foreign_exec.cpp  test_run_identity.cpp  test_run_meta.cpp  test_run_multiproc.cpp  test_run_mutate.cpp  test_run_native.cpp  test_run_open_procfs.cpp  test_run_pid_namespace.cpp  test_run_rootfs.cpp  test_run_seccomp.cpp  test_run_shebang.cpp  test_run_signal.cpp  test_run_socket.cpp  test_run_stat_owner.cpp  test_run_tty_jobcontrol.cpp  test_run_untranslated.cpp  test_sysfs_proctree.cpp  test_vfs.cpp
